# HalfZero

./: Cargo.toml  build.rs
src/: arch.rs  arg_parse.rs  backend.rs  diagnostics.rs  frontend.rs  main.rs  middleend.rs  settings.rs  source_location.rs
src/backend/: x86_64_linux.rs
src/backend/x86_64_linux/: allocator.rs  register_allocator.rs  translator.rs
src/frontend/: ast.rs  parser.rs  type_check.rs
src/middleend/: c_level_ir.rs  low_level_ir.rs
src/middleend/c_level_ir/: borrow_check.rs  translator.rs
src/middleend/low_level_ir/: translator.rs
